deployments/kubernetes/01-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cob-service
