deployments/kubernetes/06-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip-prefix
  namespace: cob-service
spec:
  stripPrefix:
    prefixes:
      - /api
