deployments/kubernetes/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cob-service
